Subject set (#2)
* added subject set insertion

* updated syntax else

* removed set

* added set

* multiple tuples adding functionality

* struct format changed

* bearer token logging

* bearer token logging 2

* without split

* revert

* log token

* query tuple api

* query http request

* response changed to body

* decoded to model

* handled null field

* used ioutil

* input modified

* string decoded

* unmarshal string to map

* expand tuple api

* max-depth query parameter added

* bad request handled

* max-depth requirement handled

* return statement added

* removed create delete api + swagger updated

* removed unnecessary models
