# internal/controller/auth.go
@@ -1,8 +1,8 @@
 package controller
 
 import (
-	"context"
 	"encoding/json"
+	"io"
 	"net/http"
 	"net/url"
 	"strings"
@@ -10,9 +10,7 @@ import (
 	"github.com/gin-gonic/gin"
 	"github.com/livspaceeng/ozone/configs"
 	"github.com/livspaceeng/ozone/internal/model"
-	acl "github.com/ory/keto/proto/ory/keto/acl/v1alpha1"
 	log "github.com/sirupsen/logrus"
-	"google.golang.org/grpc"
 )
 
 type AuthController struct{}
@@ -24,10 +22,10 @@ type AuthController struct{}
 // @Tags         auth
 // @Accept       json
 // @Produce      json
-// @Param        namespace   path      string  true  "namespace"
-// @Param        subject_id  path      string  true  "subject"
-// @Param        object      path      string  true  "resource"
-// @Param        relation    path      string  true  "access-type"
+// @Param        namespace      query      string  true  "namespace"
+// @Param        object         query      string  true  "resource"
+// @Param        relation       query      string  true  "access-type"
+// @Param        Authorization  header     string  true  "Bearer <Bouncer_access_token>" 
 // @Success      200         {string}  model.KetoResponse
 // @Failure      400         {object}  model.KetoResponse
 // @Failure      401         {object}  model.KetoResponse
@@ -50,6 +48,7 @@ func (a AuthController) Check(c *gin.Context) {
 		c.AbortWithError(http.StatusUnauthorized, nil)
 	}
 	token := strings.Split(bearer, " ")[1]
+	log.Info("Token: ", token)
 	data := url.Values{}
 	data.Set("token", token)
 	hydraRequest, _ := http.NewRequest(http.MethodPost, u.String(), strings.NewReader(data.Encode()))
@@ -100,107 +99,13 @@ func (a AuthController) Check(c *gin.Context) {
 		c.AbortWithError(http.StatusInternalServerError, err)
 	}
 	if !ketoResponse.Allowed {
-		log.Info("Not Allowed!")
+		log.Info("Policy is not created for subject:", hydraResponse.Subject)
+		log.Info("Namespace:", c.Query("namespace"))
+		log.Info("Relation:", c.Query("relation"))
+		log.Info("Object:", c.Query("object"))
 		c.AbortWithStatus(http.StatusForbidden)
 	}
 
-}
-
-// AuthController godoc
-// @Summary      create relation tuple
-// @Schemes      http
-// @Description  create relation tuple
-// @Tags         auth
-// @Accept       json
-// @Produce      json
-// @Param        relation_tuple  body      model.RelationTuple  true  "Relation Data"
-// @Success      200         {string}  model.KetoResponse
-// @Failure      400         {object}  model.KetoResponse
-// @Failure      401         {object}  model.KetoResponse
-// @Failure      403         {object}  model.KetoResponse
-// @Failure      500         {object}  model.KetoResponse
-// @Router       /auth/relation_tuples [put]
-func (a AuthController) Create(c *gin.Context) {
-	config := configs.GetConfig()
-	var relation model.RelationTuple
-	err := json.NewDecoder(c.Request.Body).Decode(&relation)
-	if err != nil {
-		log.Error("Decoding error: ", err.Error())
-		c.AbortWithError(http.StatusBadRequest, err)
-	}
-	log.Info("Relation: ", relation)
-
-	conn, err := grpc.Dial(config.GetString("keto.write.url"), grpc.WithInsecure())
-	if err != nil {
-		log.Error("Encountered error: ", err.Error())
-		c.AbortWithError(http.StatusInternalServerError, err)
-	}
-	client := acl.NewWriteServiceClient(conn)
-
-	if relation.Subject_Id != nil {
-		_, err = client.TransactRelationTuples(context.Background(), &acl.TransactRelationTuplesRequest{
-			RelationTupleDeltas: []*acl.RelationTupleDelta{
-				{
-					Action: acl.RelationTupleDelta_INSERT,
-					RelationTuple: &acl.RelationTuple{
-						Namespace: relation.Namespace,
-						Object:    relation.Object,
-						Relation:  relation.Relation,
-						Subject:   &acl.Subject{Ref: &acl.Subject_Id{Id: relation.Subject_Id}},
-					},
-				},
-			},
-		})
-		if err != nil {
-			log.Error("Encountered error: ", err.Error())
-			c.AbortWithError(http.StatusBadRequest, err)
-			return 
-		}
-	}
-	else if relation.Subject_Set != nil {
-		_, err = client.TransactRelationTuples(context.Background(), &acl.TransactRelationTuplesRequest{
-			RelationTupleDeltas: []*acl.RelationTupleDelta{
-				{
-					Action: acl.RelationTupleDelta_INSERT,
-					RelationTuple: &acl.RelationTuple{
-						Namespace: relation.Namespace,
-						Object:    relation.Object,
-						Relation:  relation.Relation,
-						Subject:   &acl.Subject{Ref: &acl.Subject_Set{Set: &acl.Subject_Set{
-							Namespace: relation.Subject_Set.Namespace,
-							Object:    relation.Subject_Set.Object,
-							Relation:  relation.Subject_Set.Relation,
-						}}},
-					},
-				},
-			},
-		})
-		if err != nil {
-			log.Error("Encountered error: ", err.Error())
-			c.AbortWithError(http.StatusBadRequest, err)
-			return 
-		}
-	}
-
-	log.Info("Successfully created tuple!")
-
-}
-
-// AuthController godoc
-// @Summary      delete relation tuple
-// @Schemes      http
-// @Description  delete relation tuple
-// @Tags         auth
-// @Accept       json
-// @Produce      json
-// @Param        relation_tuple  body      model.RelationTuple  true  "Relation Data"
-// @Success      200         {string}  model.KetoResponse
-// @Failure      400         {object}  model.KetoResponse
-// @Failure      401         {object}  model.KetoResponse
-// @Failure      403         {object}  model.KetoResponse
-// @Failure      500         {object}  model.KetoResponse
-// @Router       /auth/relation_tuples [delete]
-func (a AuthController) Delete(c *gin.Context) {
 }
 
 // AuthController godoc
@@ -210,10 +115,14 @@ func (a AuthController) Delete(c *gin.Context) {
 // @Tags         auth
 // @Accept       json
 // @Produce      json
-// @Param        namespace   path      string  true  "namespace"
-// @Param        subject_id  path      string  true  "subject"
-// @Param        object      path      string  true  "resource"
-// @Param        relation    path      string  true  "access-type"
+// @Param        namespace               query      string  true  "namespace"
+// @Param        subject_id              query      string  true  "subject"
+// @Param        object                  query      string  true  "resource"
+// @Param        relation                query      string  true  "access-type"
+// @Param        subject_set.namespace   query      string  true  "subject_set namespace"
+// @Param        subject_set.object      query      string  true  "subject_set object"
+// @Param        subject_set.relation    query      string  true  "subject_set relation"
+// @Param        Authorization           header     string  true  "Bearer <Bouncer_access_token>" 
 // @Success      200             {string}  model.KetoResponse
 // @Failure      400             {object}  model.KetoResponse
 // @Failure      401             {object}  model.KetoResponse
@@ -221,6 +130,54 @@ func (a AuthController) Delete(c *gin.Context) {
 // @Failure      500             {object}  model.KetoResponse
 // @Router       /auth/relation_tuples [get]
 func (a AuthController) Query(c *gin.Context) {
+	httpClient := &http.Client{}
+	config := configs.GetConfig()
+
+	ketoUrl := config.GetString("keto.read.url")
+	ketoPath := config.GetString("keto.read.path.check")
+	ketoRequest, _ := http.NewRequest(http.MethodGet, ketoUrl+ketoPath, nil)
+	ketoRequest.Header.Add("Accept", "application/json")
+
+	q := ketoRequest.URL.Query()
+	q.Add("namespace", c.Query("namespace"))
+	q.Add("object", c.Query("object"))
+	q.Add("relation", c.Query("relation"))
+
+	if len(c.Query("subject_id")) > 0 {
+		q.Add("subject_id", c.Query("subject_id"))
+	} else {
+		q.Add("subject_set.namespace", c.Query("subject_set.namespace"))
+		q.Add("subject_set.object", c.Query("subject_set.object"))
+		q.Add("subject_set.relation", c.Query("subject_set.relation"))
+	}
+
+	ketoRequest.URL.RawQuery = q.Encode()
+	log.Info(ketoRequest)
+	resp, err := httpClient.Do(ketoRequest)
+
+	if err != nil {
+		log.Error("Errored when sending request to the server", err.Error())
+		c.AbortWithError(http.StatusInternalServerError, err)
+		return
+	}
+	defer resp.Body.Close()
+	encodedBody, err := io.ReadAll(resp.Body)
+	if err != nil {
+		log.Error("Decoding error: ", err.Error())
+	  	c.AbortWithError(http.StatusInternalServerError, err)
+		  return
+	}
+	var body map[string]interface{}
+	json.Unmarshal([]byte(string(encodedBody)), &body)
+
+	_, errBody := body["error"]
+	if errBody {
+		log.Error("Encountered error: ", body["error"])
+		c.JSON(http.StatusBadRequest, body["error"])
+		return
+	}
+	log.Info("Response body : ", body)
+	c.JSON(http.StatusOK, body)
 }
 
 // AuthController godoc
@@ -230,10 +187,11 @@ func (a AuthController) Query(c *gin.Context) {
 // @Tags         auth
 // @Accept       json
 // @Produce      json
-// @Param        namespace   path      string  true  "namespace"
-// @Param        subject_id  path      string  true  "subject"
-// @Param        object      path      string  true  "resource"
-// @Param        relation    path      string  true  "access-type"
+// @Param        namespace      query     string   true  "namespace"
+// @Param        max-depth      query     integer  true  "max-depth to expand tuple"
+// @Param        object         query     string   true  "resource"
+// @Param        relation       query     string   true  "access-type"
+// @Param        Authorization  header    string   true  "Bearer <Bouncer_access_token>" 
 // @Success      200             {string}  model.KetoResponse
 // @Failure      400             {object}  model.KetoResponse
 // @Failure      401             {object}  model.KetoResponse
@@ -241,4 +199,47 @@ func (a AuthController) Query(c *gin.Context) {
 // @Failure      500             {object}  model.KetoResponse
 // @Router       /auth/expand [get]
 func (a AuthController) Expand(c *gin.Context) {
+	httpClient := &http.Client{}
+	config := configs.GetConfig()
+
+	ketoUrl := config.GetString("keto.read.url")
+	ketoPath := config.GetString("keto.read.path.expand")
+	ketoRequest, _ := http.NewRequest(http.MethodGet, ketoUrl+ketoPath, nil)
+	ketoRequest.Header.Add("Accept", "application/json")
+
+	q := ketoRequest.URL.Query()
+	q.Add("namespace", c.Query("namespace"))
+	q.Add("object", c.Query("object"))
+	q.Add("relation", c.Query("relation"))
+	if len(c.Query("max-depth")) > 0 {
+		q.Add("max-depth", c.Query("max-depth"))
+	}
+
+	ketoRequest.URL.RawQuery = q.Encode()
+	log.Info(ketoRequest)
+	resp, err := httpClient.Do(ketoRequest)
+
+	if err != nil {
+		log.Error("Errored when sending request to the server", err.Error())
+		c.AbortWithError(http.StatusInternalServerError, err)
+		return
+	}
+	defer resp.Body.Close()
+	encodedBody, err := io.ReadAll(resp.Body)
+	if err != nil {
+		log.Error("Decoding error: ", err.Error())
+	  	c.AbortWithError(http.StatusInternalServerError, err)
+		return
+	}
+	var body map[string]interface{}
+	json.Unmarshal([]byte(string(encodedBody)), &body)
+
+	_, errBody := body["error"]
+	if errBody {
+		log.Error("Encountered error: ", body["error"])
+		c.JSON(http.StatusBadRequest, body["error"])
+		return
+	}
+	log.Info("Response body : ", body)
+	c.JSON(http.StatusOK, body)
 }
